--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,9 @@ repositories {
 
 dependencies {
     compileOnly("io.papermc.paper:paper-api:1.21.1-R0.1-SNAPSHOT")
-    implementation("com.sk89q.worldedit:worldedit-core:7.3.6")
-    compileOnly("com.sk89q.worldedit:worldedit-bukkit:7.3.6")
+    implementation(platform("com.intellectualsites.bom:bom-newest:1.50")) // Ref: https://github.com/IntellectualSites/bom
+    compileOnly("com.fastasyncworldedit:FastAsyncWorldEdit-Core")
+    compileOnly("com.fastasyncworldedit:FastAsyncWorldEdit-Bukkit")
 }
 
 def targetJavaVersion = 21
