--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ version: '0.0.1'
 main: gg.knockoff.game.knockoff
 api-version: '1.21'
 depend: [FastAsyncWorldEdit]
-softdepend: [Crystalized_Essentials]
+softdepend: [Crystalized_Essentials, floodgate]
 commands:
   knockoff:
     description: "Commands for KnockOff"
