--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ repositories {
     maven {
         url = uri("https://repo.opencollab.dev/main/")
     }
+    maven {
+        url = "https://repo.dmulloy2.net/repository/public/"
+    }
 }
 
 dependencies {
@@ -30,6 +33,7 @@ dependencies {
     compileOnly("com.fastasyncworldedit:FastAsyncWorldEdit-Core")
     compileOnly("com.fastasyncworldedit:FastAsyncWorldEdit-Bukkit")
     compileOnly('org.geysermc.floodgate:api:2.2.3-SNAPSHOT')
+    compileOnly group: "com.comphenix.protocol", name: "ProtocolLib", version: "4.8.0";
 }
 
 def targetJavaVersion = 21
