--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: knockoff-game
 version: '0.0.1'
 main: gg.knockoff.game.knockoff
 api-version: '1.21'
-depend: [FastAsyncWorldEdit, Crystalized_Essentials]
+depend: [FastAsyncWorldEdit, Crystalized_Essentials, ProtocolLib]
 softdepend: [floodgate]
 commands:
   knockoff:
