--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compileOnly("com.fastasyncworldedit:FastAsyncWorldEdit-Bukkit")
     compileOnly('org.geysermc.floodgate:api:2.2.3-SNAPSHOT')
     compileOnly group: "com.comphenix.protocol", name: "ProtocolLib", version: "5.3.0";
+    implementation("org.xerial:sqlite-jdbc:3.47.0.0");
 }
 
 def targetJavaVersion = 21
