Switch to build.gradle.kts

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: knockoff-game
-version: '0.0.1'
+version: '1.0.0'
 main: gg.knockoff.game.knockoff
 api-version: '1.21.6'
 depend: [FastAsyncWorldEdit, Crystalized_Essentials, ProtocolLib, floodgate]
@@ -12,4 +12,4 @@ commands:
     usage: "/knockoff"
     aliases: [ ]
     permission: knockoff.commands
-    permission-message: "[!] You don't have permission to run the command"
+    permission-message: "[!] You don't have permission to run this command."
