--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -43,6 +43,7 @@ other:
     # Recreation of the Showdown mode from TubNet Knockout Tournaments.
     # When true, when 2 teams/players (in solo) are left, no new map sections will generate and the current one will start slowly decaying,
     # eventually leading to there being no map section left and one (or both) players/teams falling into the void.
+    # Requires at least 3 people/teams online to work properly.
     showdown: false
 
 
