Fix nexus blocks being different when placed down

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ todo
 ## Gradle
 ##############################
 bin/
-build/
+../../crystalized/knockoff-game/build/
 .gradle
 .gradletasknamecache
 gradle-app.setting
